--- a/BasicCounter/index.html
+++ b/BasicCounter/index.html
@@ -21,5 +21,16 @@
 
   <script>
     //write code here
+
+    let count = 0;
+    let number = document.getElementById("number");
+    number.innerText = count;
+
+    function increase() {
+      number.innerText++;
+    }
+    function decrease() {
+      number.innerText--;
+    }
   </script>
 </html>
