--- a/ClickTheButton/index.html
+++ b/ClickTheButton/index.html
@@ -14,6 +14,9 @@
     </div>
   </body>
   <script>
-    // write code here
+    function increase(){
+      let count = document.getElementById('counter')
+      count.innerText ++
+    }
   </script>
 </html>
