--- a/SeeWhatYouType/index.html
+++ b/SeeWhatYouType/index.html
@@ -17,5 +17,17 @@
   </body>
   <script>
     //code here
+    function update(){
+        let input =document.getElementById('input').value
+        if(input===''){
+          document.getElementById('output').innerText= 'Input Box Is Empty... Start Typings'
+        }
+        else{
+            document.getElementById('output').innerText= input
+        }
+        
+
+    }
+  
   </script>
 </html>
